window: focus the location entry when opening new tabs

This is a regression introduced in commit
6b530964ac6de09dcb01c2dfa774bbaa111b29e5 that removes the
EPHY_LINK_HOME_PAGE flag when calling ephy_link_open() on new tab
command callback. This patch brings that back, making
ephy_window_open_link() handle null address when EPHY_LINK_HOME_PAGE
flag is passed, and simplifying the llogic to decide whether to focus
the web view or the location entry. If the web view is blank after the
load we focus the location entry and otherwise the embed is focused.

https://bugzilla.gnome.org/show_bug.cgi?id=774599