embed/ephy-web-view.h
@@ -138,6 +138,7 @@ void                       ephy_web_view_popups_manager_reset     (EphyWebView  
 void                       ephy_web_view_save                     (EphyWebView               *view,
                                                                    const char                *uri);
 void                       ephy_web_view_load_homepage            (EphyWebView               *view);
+void                       ephy_web_view_load_new_tab_page        (EphyWebView               *view);
 
 char *                     ephy_web_view_create_web_application   (EphyWebView               *view,
                                                                    const char                *title,
